Harmadik heti hazi 3-4 feladat megoldas
